test: refactoring of test warnings